force-app/main/default/objects/SignatureValidation__c/fields/Signature_Request__c.field-meta.xml
<CustomField>
    <fullName>Signature_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Signature Request</label>
    <referenceTo>Signature_Request__c</referenceTo>
    <relationshipLabel>SignatureValidations</relationshipLabel>
    <relationshipName>SignatureValidations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>