force-app/main/default/objects/SignatureValidation__c/fields/SignerIP__c.field-meta.xml
<CustomField>
    <fullName>SignerIP__c</fullName>
    <label>SignerIP</label>
    <length>45</length>
    <type>Text</type>
</CustomField>