force-app/main/default/objects/SignatureValidation__c/fields/ValidationDate__c.field-meta.xml
<CustomField>
    <fullName>ValidationDate__c</fullName>
    <label>ValidationDate</label>
    <type>DateTime</type>
</CustomField>