force-app/main/default/objects/SignatureValidation__c/fields/ValidationHash__c.field-meta.xml
<CustomField>
    <fullName>ValidationHash__c</fullName>
    <label>ValidationHash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>