force-app/main/default/objects/SignatureValidation__c/fields/ValidationStatus__c.field-meta.xml
<CustomField>
    <fullName>ValidationStatus__c</fullName>
    <label>ValidationStatus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>